add doc to Week 1 Notebook

--- a/Weekly Notebook/Week 1/module_01_yxiao39_Submission/01_numpy_and_image_basics_yxiao39.ipynb
+++ b/Weekly Notebook/Week 1/module_01_yxiao39_Submission/01_numpy_and_image_basics_yxiao39.ipynb
@@ -7,6 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Author: Yuliang Xiao\n",
+    "## JHED: yxiao39\n",
+    "## Date: 2022-09-08\n",
     "%matplotlib inline\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
