--- a/Weekly Notebook/Week 1/module_01_yxiao39_Submission/01_numpy_and_image_basics_yxiao39.ipynb
+++ b/Weekly Notebook/Week 1/module_01_yxiao39_Submission/01_numpy_and_image_basics_yxiao39.ipynb
@@ -497,7 +497,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('cv2022')",
+   "display_name": "Python 3.9.15 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -511,11 +511,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "854b358e0047ae4ab7f2fb686776eac9876bbc3bf5ce9ba1c760d040753c5198"
+    "hash": "a665b5d41d17b532ea9890333293a1b812fa0b73c9c25c950b3cedf1bebd0438"
    }
   }
  },
